--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,8 @@
   <head>
     <title>RailsSimpleAirbnb</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.2/css/all.css">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -11,6 +13,17 @@
   </head>
 
   <body>
+    <nav class="navbar bg-light">
+      <div class="container-fluid">
+        <%= link_to 'Simple Airbnb', flats_path, class: "navbar-brand"  %>
+        <div>
+        <i class="fa-solid fa-plus"></i>
+        <%= link_to 'Add Flat', new_flat_path, class: "navbar-brand"  %>
+        </div>
+      </div>
+    </nav>
+    <div class="container">
     <%= yield %>
+    </div>
   </body>
 </html>
